Fix vertical alignment of index card links

--- a/style.css
+++ b/style.css
@@ -643,6 +643,8 @@ p {
 
 .card {
   padding: var(--space-6);
+  display: flex;
+  flex-direction: column;
 }
 
 .card .icon {
@@ -671,6 +673,7 @@ p {
 }
 
 .card a {
+  margin-top: auto;
   font-weight: 600;
 }
 
